--- a/DScaler/DScaler/DScaler2005.vcproj
+++ b/DScaler/DScaler/DScaler2005.vcproj
@@ -831,7 +831,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\avi.c"
+				RelativePath=".\avi.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -867,7 +867,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\avi_audio.c"
+				RelativePath=".\avi_audio.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -903,7 +903,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\avi_file.c"
+				RelativePath=".\avi_file.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -939,7 +939,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\avi_index.c"
+				RelativePath=".\avi_index.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -975,7 +975,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\avi_video.c"
+				RelativePath=".\avi_video.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -8624,7 +8624,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\xml_cdata.c"
+				RelativePath=".\xml_cdata.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -8664,7 +8664,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\xml_hash.c"
+				RelativePath=".\xml_hash.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -8704,7 +8704,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\xml_prolog.tab.c"
+				RelativePath=".\xml_prolog.tab.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -8746,7 +8746,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\xml_scan.yy.c"
+				RelativePath=".\xml_scan.yy.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -8786,7 +8786,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\xmltv_db.c"
+				RelativePath=".\xmltv_db.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -8826,7 +8826,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\xmltv_tags.c"
+				RelativePath=".\xmltv_tags.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -8866,7 +8866,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\xmltv_timestamp.c"
+				RelativePath=".\xmltv_timestamp.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
